[package]
name = "gpt-vision-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.25.0", features = ["full"] }
async-openai = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
